test/fail/unterminated-insert.rnp
#X
---
 --> fail/unterminated-insert.rnp:1:3
  |
1 | #X
  |   ^ Unexpected end of insert
  |
